# library-app

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
backup/: book_detail_page.ui
build-aux/: org.thievingraccoon.Books.Devel.json
data/: org.thievingraccoon.Books.desktop.in.in  org.thievingraccoon.Books.gschema.xml.in  org.thievingraccoon.Books.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: author_row.ui  authors_page.ui  book_cover.ui  book_form_page.ui  books_page.ui  scan_book_page.ui  window.ui
migrations/2021-11-11-235417_create_books/: down.sql  up.sql
po/: POTFILES.in
src/: .env  application.rs  config.rs.in  database.rs  dbqueries.rs  main.rs  meson.build  models.rs  path.rs  schema.rs  window.rs
src/database/: library.sqlite
src/ui/: author_row.rs  authors_page.rs  book_cover.rs  book_form_page.rs  books_page.rs  camera_paintable.rs  mod.rs  scan_book_page.rs
