[package]
name = "books"
version = "0.1.0"
authors = ["Max Hackinger <mahaxi@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.5"
rand = "0.8.4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = {version = "1.4", features = ["sqlite"]}
dotenv = "0.15.0"

strum = "0.20.0"
strum_macros = "0.20.1"

gtk = {version = "0.3", package = "gtk4"}
gtk-macros = "0.3.0"
adw = { version = "0.1.0-alpha", package = "libadwaita" }

openlibrary-client = { git = "https://github.com/happychameleon/olc-rs.git", rev="c678ab933e409fbc39cc9b5f8bb7e23d289738e8" }
