[package]
name = "books"
version = "0.1.0"
authors = ["Max Hackinger <mahaxi@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0.47"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.5"
rand = "0.8.4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = {version = "1.4", features = ["sqlite"]}
dotenv = "0.15.0"
ashpd =  {git = "https://github.com/bilelmoussaoui/ashpd", features=["feature_gtk4", "feature_pipewire"], rev="cef76afa7d5e5d6e3014004ec05a91db1a90cdf4"}
futures = "0.3"

gst = { version = "0.17", package = "gstreamer" }
gst_base = { version = "0.17", package = "gstreamer-base" }
gst_video = { version = "0.17", package = "gstreamer-video" }

gtk = { package = "gtk4", version = "0.3" }
gtk-macros = "0.3.0"
adw = { version = "0.1.0-alpha", package = "libadwaita" }

strum = "0.20.0"
strum_macros = "0.20.1"
tracing = "0.1"
tracing-subscriber = "0.2"
zbar-rust = "0.0"

openlibrary-client = { git = "https://github.com/happychameleon/olc-rs.git", rev="c678ab933e409fbc39cc9b5f8bb7e23d289738e8" }
